--- a/Python/leet-code-p4.ipynb
+++ b/Python/leet-code-p4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -15,31 +15,31 @@
     }
    ],
    "source": [
-    "grid = [[3, 2, 1], [1, 7, 6], [2, 7, 7]]\n",
+    "grid = [[3,2,1],[1,7,6],[2,7,7]]\n",
     "# grid = [[3,1,2,2],[1,4,4,5],[2,4,2,2],[2,4,2,2]]\n",
-    "grid = [[1, 2], [2, 1]]\n",
+    "grid = [[1,2],[2,1]]\n",
     "freq = {}\n",
     "for i in zip(*grid):\n",
-    "    freq[i] = freq.get(i, 0) + 1\n",
-    "ans = 0\n",
+    "    freq[i] = freq.get(i,0) + 1\n",
+    "ans =0\n",
     "for i in grid:\n",
-    "    if freq.get(tuple(i), 0) > 0:\n",
-    "        ans += freq[tuple(i)]\n",
+    "    if freq.get(tuple(i),0)>0:\n",
+    "        ans +=freq[tuple(i)]\n",
     "print(freq)\n",
-    "print(ans)\n"
+    "print(ans)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "658\n",
-      "-51 -15 -57 -56 -5 -66 -92 88 -63 -20 73 -57 -26 12 75 -41 24 86 99 -39 -20 -51 -53 58 21 81 -83 46 31 -92 -42 96 4 -59 44 -94 12 -28 -22 46 -2 -33 -19 19 34 15 100 -10 -74 36 -50 63 54 -60 -57 49 7 13 -39 79 -91 38 39 47 4 1 -73 -96 -24 -57 74 75 56 4 65 -33 -56 7 12 -44 2 -29 -3 37 4 -23 -82 -80 -63 15 -17 86 80 76 -37 -60 -12 -38 77 -19 -75 61 -99 -20 51 21 27 -12 85 41 23 50 7 -84 -89 46 -7 46 -15 66 -11 32 -58 -71 -60 51 87 -50 -94 -100 46 35 90 -45 -54 52 81 48 82 72 47 9 -34 44 -49 6 -28 -57 -87 34 -54 -96 69 0 -5 23 -91 51 -43 36 54 10 -21 94 57 55 -71 84 -50 98 55 55 -1 -26 84 -45 47 -50 -92 -94 88 80 -4 78 -20 65 72 -9 53 46 -15 34 -50 -48 -88 79 0 37 -72 71 75 1 13 6 91 -55 -43 -74 81 -29 40 0 -49 79 -77 -18 4 -84 54 92 -83 41 -53 -29 -49 42 55 -54 -52 -93 -96 -45 -18 -92 -38 -24 78 84 66 -88 74 83 22 23 -28 -29 56 -65 -35 48 -26 -60 98 78 -15 91 -41 37 88 -58 -77 56 13 -52 -17 -8 -11 27 61 9 89 35 96 9 -55 -11 29 32 -29 -21 72 -3 -54 -97 -62 83 -27 11 -24 62 -18 62 57 47 6 -19 -3 -62 -94 -50 47 12 93 1 50 -93 -9 95 90 -10 86 2 22 48 43 -48 16 90 100 82 -94 39 -18 -21 -54 90 -26 -67 51 5 84 -41 -60 90 -50 39 -45 -89 -15 -57 24 -63 -30 -42 29 55 -38 96 19 89 -55 46 -69 -73 46 69 -77 93 65 13 -92 13 62 -46 -57 -60 -65 -26 -73 -8 -87 -72 -78 -69 98 -54 24 28 18 -84 26 86 7 3 31 13 84 69 -6 -59 -3 96 -52 -46 -57 -17 88 53 -67 57 -67 61 51 92 -29 -78 23 -31 -70 -84 -37 85 -32 -66 -95 -42 -14 -45 -48 -51 -63 -88 -79 -67 -18 -50 4 78 -94 100 -6 -81 -51 54 -3 -61 12 -55 1 99 19 21 52 -5 63 91 79 -40 1 10 -9 26 -27 -33 -9 11 -83 -87 -71 -47 53 -80 -16 -24 47 85 -86 -8 -60 -1 -75 48 88 93 73 -24 19 36 76 -82 21 62 94 -91 71 93 41 72 85 33 -31 36 -97 -17 50 47 -17 -78 44 -68 -55 -27 -88 71 9 58 89 94 4 96 65 -1 87 -82 -64 -51 86 -64 -64 -63 85 -35 -95 -49 24 -59 30 -36 -3 97 84 34 87 -100 17 -19 1 42 -68 -32 15 28 9 -68 76 86 16 -95 66 -16 -32 -92 -30 46 37 -31 -10 47 66 -14 16 -41 0 16 -69 -79 -67 4 8 -82 -95 85 -2 97 -64 68 45 -55 97 -77 -11 -57 -16 78 -29 -44 -11 -72 25 -9 -60 -77 36 13 -80 15 75 -18 -34 56 98 7 99 61 -98 22 -72 2 -36 -42 -26 4 66 -43 -67 -19 24 -4 -43 35 18 43 -38 85 50 -87 65 -24 -67 95 87 -24 47 -49 20 95 64 -56 57 -27 -38 -99 -37 -19 -14 1 85 -37 -28 16 82 -26 -98 0 84 96 -20 -53\n"
+      "608\n",
+      "0 87 -49 -77 -37 -15 -98 -92 -53 2 -86 28 67 -23 42 54 -37 23 -1 -80 38 71 -83 8 81 52 1 -36 64 85 -72 72 62 -24 -83 97 4 -35 71 -18 -26 -28 95 25 -28 44 42 -41 -60 -21 -46 61 56 -32 92 98 31 39 -75 -88 -17 -89 89 -70 -84 59 3 92 -64 -63 -30 17 -49 15 65 -11 -89 -16 36 79 36 -71 -40 15 -83 64 92 26 -52 -49 -32 -49 -98 -57 44 -52 55 -71 13 59 -47 80 -92 38 -63 -51 35 -28 -5 -94 -33 5 -6 69 -21 -62 -1 26 -92 -66 -1 4 50 45 35 1 79 -76 86 51 13 76 9 25 -22 -74 -94 31 99 -83 -35 -5 25 15 -61 95 -50 -5 75 -13 13 15 -82 -42 53 -23 12 -90 97 -4 32 -52 -90 56 -95 38 -21 -32 -55 -66 -18 -12 55 56 49 -80 -90 -83 -76 -4 60 -75 -47 -41 -22 -37 -47 9 85 38 50 -54 70 66 54 -38 5 69 -12 -86 39 36 -48 -16 96 -52 -42 -21 -78 -50 31 19 67 -60 -80 -53 -61 -23 69 27 52 -43 73 -66 -58 25 4 -97 -4 -22 90 9 -78 -31 -10 -85 -75 63 16 -32 64 29 21 0 90 33 73 -15 56 37 53 -67 28 54 60 21 -15 -42 89 38 19 80 13 -54 -32 -45 76 -49 -96 38 86 -83 -36 90 28 84 95 -21 21 59 -24 22 -56 74 37 -85 14 27 21 -12 55 -100 -47 -20 99 -82 71 98 -15 -4 52 81 21 -73 -25 54 -92 11 -73 -77 36 -12 43 -97 18 55 -37 -88 -86 3 -40 -1 86 -7 54 -19 41 52 -97 -37 78 4 99 5 6 81 1 11 -26 -29 71 47 88 -34 -95 91 -82 2 -41 25 25 19 -59 -35 -52 -75 70 -92 79 6 16 16 -39 3 -21 -51 78 4 36 -32 14 -43 -71 -38 -83 85 88 -72 40 -39 14 -23 25 -4 23 -75 72 -73 -5 -44 -73 17 -41 9 56 -80 -47 -75 77 62 4 91 75 -72 86 -64 -23 28 43 76 -41 75 -2 -12 95 29 -45 -35 40 44 33 77 29 -55 46 -8 -48 -9 100 -95 77 47 27 60 39 26 61 -33 10 -52 -2 97 47 -70 97 -34 -96 -43 -36 76 99 -19 27 58 -6 -12 -60 -65 54 38 -2 -24 66 -92 -11 40 -9 -84 -93 -4 2 57 31 -32 -6 31 -95 -4 -32 -16 -66 -79 100 87 75 73 33 29 -42 -29 52 51 59 -67 87 -32 -72 22 -100 -11 86 83 95 18 -83 13 -66 -44 -42 66 9 -93 -40 -65 68 0 -98 40 15 57 70 -22 27 -69 16 12 98 87 -77 -70 81 75 -62 -37 87 0 14 -15 -80 70 23 34 86 -30 -50 -90 -78 -51 -89 -58 30 43 66 15 -92 9 1 -11 -95 -47 62 26 -89 -47 36 -27 -92 15 -74 8 -73 -28 81 97 14 -39 -28 16 -44 -50 72 37 -66 -23 -28 52 53 100 4 -97 -3 -79 47 -49 -31 93 -72 -69 29 88 2 -7 -5 62 -84 62 88 -43\n"
      ]
     }
    ],
@@ -77,56 +77,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Codeforce : https://codeforces.com/contest/1831/problem/C"
+    "# Codeforce : https://codeforces.com/contest/1831/problem/C\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "from collections import deque,defaultdict\n",
+    "# import sys\n",
+    "# from collections import deque, defaultdict\n",
     "# sys.stdin = open('test.inp', 'r')\n",
     "# sys.stdout = open('test.out', 'w')\n",
+    "# input = sys.stdin.readline\n",
+    "# t = int(input())\n",
+    "# while t:\n",
+    "#     t -= 1\n",
+    "#     n = int(input())\n",
+    "#     adj = defaultdict(list)\n",
+    "#     pos = {}\n",
+    "#     q = deque()\n",
+    "#     check = [False] * (n+1)\n",
+    "#     for i in range(n-1):\n",
+    "#         u, v = list(map(int, input().split()))\n",
+    "#         adj[u].append(v)\n",
+    "#         adj[v].append(u)\n",
+    "#         pos[(u, v)] = i\n",
+    "#         pos[(v, u)] = i\n",
+    "#         if u == 1:\n",
+    "#             q.append((v, i))\n",
+    "#             check[i] = True\n",
+    "#         elif v == 1:\n",
+    "#             q.append((u, i))\n",
+    "#             check[i] = True\n",
+    "#     count = 0\n",
+    "#     while q:\n",
+    "#         count += 1\n",
+    "#         q_new = deque()\n",
+    "#         while q:\n",
+    "#             u, i = q.popleft()\n",
+    "#             for v in adj[u]:\n",
+    "#                 if check[pos[(u, v)]]:\n",
+    "#                     continue\n",
+    "#                 if pos[(u, v)] < i:\n",
+    "#                     q_new.append((v, pos[(u, v)]))\n",
+    "#                 else:\n",
+    "#                     q.append((v, pos[(u, v)]))\n",
+    "#                 check[pos[(u, v)]] = True\n",
+    "#         q = q_new\n",
+    "#     sys.stdout.write(str(count) + '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
     "input = sys.stdin.readline\n",
     "t = int(input())\n",
-    "while t:\n",
-    "    t -= 1\n",
-    "    n = int(input())\n",
-    "    adj = defaultdict(list)\n",
-    "    pos = {}\n",
-    "    q = deque()\n",
-    "    check = [False] * (n+1)\n",
-    "    for i in range(n-1):\n",
-    "        u, v = list(map(int, input().split()))\n",
-    "        adj[u].append(v)\n",
-    "        adj[v].append(u)\n",
-    "        pos[(u, v)] = i\n",
-    "        pos[(v, u)] = i\n",
-    "        if u == 1:\n",
-    "            q.append((v, i))\n",
-    "            check[i] = True\n",
-    "        elif v == 1:\n",
-    "            q.append((u, i))\n",
-    "            check[i] = True\n",
-    "    count = 0\n",
-    "    while q:\n",
-    "        count += 1\n",
-    "        q_new = deque()\n",
-    "        while q:\n",
-    "            u, i = q.popleft()\n",
-    "            for v in adj[u]:\n",
-    "                if check[pos[(u, v)]]:\n",
-    "                    continue\n",
-    "                if pos[(u, v)] < i:\n",
-    "                    q_new.append((v, pos[(u, v)]))\n",
-    "                else:\n",
-    "                    q.append((v, pos[(u, v)]))\n",
-    "                check[pos[(u, v)]] = True\n",
-    "        q = q_new\n",
-    "    sys.stdout.write(str(count) + '\\n')\n"
+    "list_num = input().split()\n",
+    "print('\\n'.join(max(i) for i in list_num))"
    ]
   }
  ],
