--- a/Python/leet-code-p4.ipynb
+++ b/Python/leet-code-p4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,15 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "608\n",
-      "0 87 -49 -77 -37 -15 -98 -92 -53 2 -86 28 67 -23 42 54 -37 23 -1 -80 38 71 -83 8 81 52 1 -36 64 85 -72 72 62 -24 -83 97 4 -35 71 -18 -26 -28 95 25 -28 44 42 -41 -60 -21 -46 61 56 -32 92 98 31 39 -75 -88 -17 -89 89 -70 -84 59 3 92 -64 -63 -30 17 -49 15 65 -11 -89 -16 36 79 36 -71 -40 15 -83 64 92 26 -52 -49 -32 -49 -98 -57 44 -52 55 -71 13 59 -47 80 -92 38 -63 -51 35 -28 -5 -94 -33 5 -6 69 -21 -62 -1 26 -92 -66 -1 4 50 45 35 1 79 -76 86 51 13 76 9 25 -22 -74 -94 31 99 -83 -35 -5 25 15 -61 95 -50 -5 75 -13 13 15 -82 -42 53 -23 12 -90 97 -4 32 -52 -90 56 -95 38 -21 -32 -55 -66 -18 -12 55 56 49 -80 -90 -83 -76 -4 60 -75 -47 -41 -22 -37 -47 9 85 38 50 -54 70 66 54 -38 5 69 -12 -86 39 36 -48 -16 96 -52 -42 -21 -78 -50 31 19 67 -60 -80 -53 -61 -23 69 27 52 -43 73 -66 -58 25 4 -97 -4 -22 90 9 -78 -31 -10 -85 -75 63 16 -32 64 29 21 0 90 33 73 -15 56 37 53 -67 28 54 60 21 -15 -42 89 38 19 80 13 -54 -32 -45 76 -49 -96 38 86 -83 -36 90 28 84 95 -21 21 59 -24 22 -56 74 37 -85 14 27 21 -12 55 -100 -47 -20 99 -82 71 98 -15 -4 52 81 21 -73 -25 54 -92 11 -73 -77 36 -12 43 -97 18 55 -37 -88 -86 3 -40 -1 86 -7 54 -19 41 52 -97 -37 78 4 99 5 6 81 1 11 -26 -29 71 47 88 -34 -95 91 -82 2 -41 25 25 19 -59 -35 -52 -75 70 -92 79 6 16 16 -39 3 -21 -51 78 4 36 -32 14 -43 -71 -38 -83 85 88 -72 40 -39 14 -23 25 -4 23 -75 72 -73 -5 -44 -73 17 -41 9 56 -80 -47 -75 77 62 4 91 75 -72 86 -64 -23 28 43 76 -41 75 -2 -12 95 29 -45 -35 40 44 33 77 29 -55 46 -8 -48 -9 100 -95 77 47 27 60 39 26 61 -33 10 -52 -2 97 47 -70 97 -34 -96 -43 -36 76 99 -19 27 58 -6 -12 -60 -65 54 38 -2 -24 66 -92 -11 40 -9 -84 -93 -4 2 57 31 -32 -6 31 -95 -4 -32 -16 -66 -79 100 87 75 73 33 29 -42 -29 52 51 59 -67 87 -32 -72 22 -100 -11 86 83 95 18 -83 13 -66 -44 -42 66 9 -93 -40 -65 68 0 -98 40 15 57 70 -22 27 -69 16 12 98 87 -77 -70 81 75 -62 -37 87 0 14 -15 -80 70 23 34 86 -30 -50 -90 -78 -51 -89 -58 30 43 66 15 -92 9 1 -11 -95 -47 62 26 -89 -47 36 -27 -92 15 -74 8 -73 -28 81 97 14 -39 -28 16 -44 -50 72 37 -66 -23 -28 52 53 100 4 -97 -3 -79 47 -49 -31 93 -72 -69 29 88 2 -7 -5 62 -84 62 88 -43\n"
+      "509\n",
+      "-97 9 -51 -41 -36 -97 55 -6 -13 39 83 74 -27 34 -6 -69 -42 -77 89 -27 -95 29 -17 53 -56 66 35 -37 7 70 81 -58 -98 -8 -51 -74 74 82 -30 -96 -41 45 -39 -18 49 2 -73 21 -98 92 92 43 3 -22 -47 -51 -66 -59 -99 1 58 -18 -48 34 74 84 -78 -57 -81 23 92 -92 90 48 -89 -14 58 -24 -56 -70 86 -68 -35 -69 8 88 71 4 47 59 65 -11 49 -4 -69 71 -23 60 -42 17 35 99 14 24 57 92 -88 -47 -30 43 91 71 -72 -87 7 66 -81 49 -78 54 -37 -59 -29 -41 5 15 92 -9 -36 64 88 -92 17 99 -89 -87 36 -5 -37 -74 -56 -68 -80 -13 -12 5 -6 -58 70 -48 -42 -57 -69 66 -41 -80 -35 90 -50 56 -81 24 4 35 -73 96 -18 1 46 -83 -31 -68 21 0 -60 -59 96 97 -87 96 -33 39 -35 23 75 97 -8 48 55 -3 -45 -56 -19 -8 -71 94 72 43 29 -24 95 65 -9 -99 -51 -96 79 -55 56 21 -9 -60 -92 60 -20 -26 -2 -35 85 6 -32 -99 -42 17 55 39 -64 40 -49 87 -60 -37 -25 -62 34 95 -39 -95 35 -1 27 18 11 15 -67 70 7 34 18 -64 94 98 18 8 53 90 44 76 -31 8 -60 -99 89 -47 90 43 73 -94 -28 -67 97 71 68 -63 84 -50 -81 94 22 -20 -95 51 9 -85 -7 -43 38 -3 39 56 36 -80 21 -59 -73 -61 91 9 -49 -10 58 -8 86 74 92 48 -4 -93 67 -86 50 31 1 -27 50 -31 -53 -49 -57 -46 83 93 -51 -8 92 67 84 -67 7 1 39 34 -73 48 -78 98 -33 31 97 -28 86 41 -38 -23 70 54 55 -99 82 46 -77 96 -66 68 -96 97 -33 -53 -72 92 -9 -3 -28 -32 68 67 36 -31 92 56 19 69 34 -40 -46 87 35 -27 20 -74 -43 -68 92 41 -6 -97 16 50 10 -54 75 -40 -24 -73 57 -34 -96 70 -45 -84 50 12 -95 -37 94 19 -24 -19 7 0 44 -78 -58 -17 9 71 -77 34 24 -52 4 -83 -71 -50 -57 -28 96 62 -40 65 45 -1 -95 9 36 45 38 75 -23 -96 44 77 -55 -42 -8 -3 -56 -47 -49 65 -53 -5 56 40 12 -90 79 -64 72 -71 94 -63 -63 8 -97 -24 9 8 37 3 70 70 96 -81 72 40 93 -68 74 -96 40 12 13 71 27 94 2 76 -4 -76 4 -58 -68 -94 28 -41 -79 -7 -95 -15 -70 -67 87 -70 56 83 -18 -94 -100\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,26 +131,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "5\n",
-      "1\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "input = sys.stdin.readline\n",
     "t = int(input())\n",
     "list_num = input().split()\n",
     "print('\\n'.join(max(i) for i in list_num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "q =deque()\n",
+    "q.append(1)\n",
+    "q.append(2)\n",
+    "q.append(3)\n",
+    "x = q.popleft()\n",
+    "print(x)\n"
    ]
   }
  ],
