--- a/Python/leet-code-p6.ipynb
+++ b/Python/leet-code-p6.ipynb
@@ -68,53 +68,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "5\n"
      ]
     }
    ],
    "source": [
-    "from typing import List\n",
+    "l = [(0,1),(0,3),(0,-1),(0,2),(0,10),(1,4),(1,2),(1,3),(2,3),(2,4),(3,4)]\n",
+    "import bisect\n",
+    "x = bisect.bisect_right(l,(0,10**9))\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "t= int(input())\n",
+    "for _ in range(t):\n",
+    "    n = int(input())\n",
+    "    x = int(n**0.5)\n",
+    "    print(2*(x+n//x)) if n%x == 0 else print(2*(x+n//x)+2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 4\n",
+      "1011100000\n",
+      "10111000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "n = 10\n",
+    "k = -2\n",
+    "y = \"1011010111\"\n",
     "\n",
-    "class Solution:\n",
-    "    def sumDistance(self, nums: List[int], s: str, d: int) -> int:\n",
-    "        n = len(nums)\n",
-    "        positions = nums.copy()\n",
-    "        directions = [1 if c == 'R' else -1 for c in s]\n",
-    "        collisions = set()\n",
-    "        \n",
-    "        for _ in range(d):\n",
-    "            for i in range(n):\n",
-    "                positions[i] += directions[i]\n",
-    "                if positions[i] in positions[:i] + positions[i+1:]:\n",
-    "                    collisions.add(positions[i])\n",
-    "        \n",
-    "        robot_positions = {}\n",
+    "# n = 1\n",
+    "# k = -1\n",
+    "# y = \"0\"\n",
+    "\n",
+    "# n = 6\n",
+    "# k = -4\n",
+    "# y = \"110100\"\n",
+    "c0_y = y.count('0')\n",
+    "c1_y = len(y)-c0_y\n",
+    "c1_x = math.ceil((n-k)/2)\n",
+    "c0_x = c1_x+k\n",
+    "x =\"\"\n",
+    "x_len = c0_x+c1_x\n",
+    "print(c1_x, c0_x)\n",
+    "st = '1'*c1_x+'0'*c0_x\n",
+    "\n",
+    "# # change s[5] to '0'\n",
+    "i=0 \n",
+    "if x_len==len(y):\n",
+    "    while c1_x>0 and c0_x>0:\n",
+    "        # print(st)\n",
+    "        k = st[:i]+'0'+st[i+1:]\n",
+    "        if k>=y:\n",
+    "            st = k\n",
+    "            c0_x-=1\n",
+    "        else:\n",
+    "            c1_x-=1\n",
+    "        x+=st[i]\n",
+    "        i+=1\n",
+    "    # x+= '0'*c0_x+'1'*c1_x \n",
+    "#     for i in range(len(y)-1):\n",
+    "#         if y[i+1:]>st or c0_x==0:\n",
+    "#             x+='1'\n",
+    "#             c1_x-=1\n",
+    "#             break\n",
+    "#         else:\n",
+    "#             if y[i]=='0':\n",
+    "#                 c0_x-=1\n",
+    "#             else:\n",
+    "#                 c1_x-=1\n",
+    "#             x+=y[i]\n",
+    "    # x+='0'*c0_x+'1'*c1_x\n",
+    "# else:\n",
+    "#     x='1'+'0'*c0_x+'1'*(c1_x-1)\n",
+    "print(st)\n",
+    "print(x)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = int(input())\n",
+    "for _ in range(t):\n",
+    "    n = int(input())\n",
+    "    row1 = list(map(int, input().split()))\n",
+    "    row2 = list(map(int, input().split()))\n",
+    "    if n % 2 == 1:\n",
+    "        d = {i: 1 for i in row1+row2}\n",
+    "        for i in range(2*n+1):\n",
+    "            if i not in d:\n",
+    "                print(i)\n",
+    "                break\n",
+    "    else:\n",
+    "        d1 = {}\n",
     "        for i in range(n):\n",
-    "            if positions[i] not in collisions:\n",
-    "                if positions[i] not in robot_positions:\n",
-    "                    robot_positions[positions[i]] = []\n",
-    "                robot_positions[positions[i]].append(i)\n",
-    "        \n",
-    "        total_distance = 0\n",
-    "        for positions in robot_positions.values():\n",
-    "            for i in range(len(positions)):\n",
-    "                for j in range(i+1, len(positions)):\n",
-    "                    distance = abs(nums[positions[i]] - nums[positions[j]])\n",
-    "                    total_distance = (total_distance + distance) % (10**9 + 7)\n",
-    "        \n",
-    "        return total_distance\n",
-    "nums = [-2,0,2]\n",
-    "s = \"RLL\"\n",
-    "d = 3\n",
-    "x = Solution()\n",
-    "print(x.sumDistance(nums, s, d))"
+    "            d1[row1[i]] = d1.get(row1[i], 0)+1\n",
+    "            d1[row2[i]] = d1.get(row2[i], 0)+1\n",
+    "        max_r1 = 0\n",
+    "        check = True\n",
+    "        for i in range(n):\n",
+    "            if i % 2 == 1:\n",
+    "                if d1[row1[i]] > 1:\n",
+    "                    check = False\n",
+    "                    break\n",
+    "                else:\n",
+    "                    if row1[i] > max_r1:\n",
+    "                        max_r1 = row1[i]\n",
+    "        if check:\n",
+    "            d1.pop(max_r1)\n",
+    "\n",
+    "        d2 = {}\n",
+    "        for i in range(n):\n",
+    "            d2[row1[i]] = d2.get(row1[i], 0)+1\n",
+    "            d2[row2[i]] = d2.get(row2[i], 0)+1\n",
+    "        max_r2 = 0\n",
+    "        check = True\n",
+    "        for i in range(n):\n",
+    "            if i % 2 == 0:\n",
+    "                if d2[row2[i]] > 1:\n",
+    "                    check = False\n",
+    "                    break\n",
+    "                else:\n",
+    "                    if row2[i] > max_r2:\n",
+    "                        max_r2 = row2[i]\n",
+    "        if check:\n",
+    "            d2.pop(max_r2)\n",
+    "\n",
+    "        max_x = 0\n",
+    "        for i in range(2*n+1):\n",
+    "            if i not in d1:\n",
+    "                max_x = max(max_x, i)\n",
+    "                break\n",
+    "        for i in range(2*n+1):\n",
+    "            if i not in d2:\n",
+    "                max_x = max(max_x, i)\n",
+    "                break\n",
+    "        print(max_x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.stdin = open('test.inp', 'r')\n",
+    "sys.stdout = open('test.out', 'w')\n",
+    "input = sys.stdin.readline\n",
+    "out = sys.stdout.write\n",
+    "t = int(input())\n",
+    "for _ in range(t):\n",
+    "    n = int(input())\n",
+    "    a = list(map(int, input().split()))\n",
+    "    val = a[0]\n",
+    "    check = False\n",
+    "    for i in range(n):\n",
+    "        if a[i] >= val and not check:\n",
+    "            val = a[i]\n",
+    "            out('1')\n",
+    "        elif a[i] < val and a[i] <= a[0] and not check:\n",
+    "            val = a[i]\n",
+    "            out('1')\n",
+    "            check = True\n",
+    "        elif a[i] >= val and check and a[i] <= a[0]:\n",
+    "            val = a[i]\n",
+    "            out('1')\n",
+    "        else:\n",
+    "            out('0')\n",
+    "    out('\\n')\n"
    ]
   }
  ],
