--- a/Python/leet-code-p6.ipynb
+++ b/Python/leet-code-p6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,22 +80,39 @@
     }
    ],
    "source": [
-    "l = [(0,1),(0,3),(0,-1),(0,2),(0,10),(1,4),(1,2),(1,3),(2,3),(2,4),(3,4)]\n",
+    "l2 = [(0,1),(0,3),(0,-1),(0,2),(0,10),(1,4),(1,2),(1,3),(2,3),(2,4),(3,4)]\n",
     "import bisect\n",
-    "x = bisect.bisect_right(l,(0,10**9))\n",
+    "x = bisect.bisect_right(l2,(0,10**9))\n",
     "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32\n"
+      "24\n",
+      "24\n",
+      "4\n",
+      "14\n",
+      "14\n",
+      "4\n",
+      "14\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m t\u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(\u001b[39minput\u001b[39m())\n\u001b[0;32m      2\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(t):\n\u001b[1;32m----> 3\u001b[0m     n \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m())\n\u001b[0;32m      4\u001b[0m     x \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(n\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m0.5\u001b[39m)\n\u001b[0;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m2\u001b[39m\u001b[39m*\u001b[39m(x\u001b[39m+\u001b[39mn\u001b[39m/\u001b[39m\u001b[39m/\u001b[39mx)) \u001b[39mif\u001b[39;00m n\u001b[39m%\u001b[39mx \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m \u001b[39melse\u001b[39;00m \u001b[39mprint\u001b[39m(\u001b[39m2\u001b[39m\u001b[39m*\u001b[39m(x\u001b[39m+\u001b[39mn\u001b[39m/\u001b[39m\u001b[39m/\u001b[39mx)\u001b[39m+\u001b[39m\u001b[39m2\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
@@ -109,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -406,6 +423,97 @@
     "    if type(t) is threading.Thread:\n",
     "        t.join()\n",
     "print(\"all done\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = [1,2,3,\"ga\",\"vjp\"]\n",
+    "list(filter(lambda x: type(x) is not str, l1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def makeArrayIncreasing(self, arr1: List[int], arr2: List[int]) -> int:\n",
+    "        arr2.sort()\n",
+    "        dp = {-1:0}\n",
+    "        n = len(arr2)\n",
+    "        for i in arr1:\n",
+    "            tmp = {}\n",
+    "            for key in dp:\n",
+    "                if i>key:\n",
+    "                    tmp[i] = min(tmp.get(i, float('inf')), dp[key])\n",
+    "                loc = bisect.bisect_right(arr2, key)\n",
+    "                if loc<n:\n",
+    "                    tmp[arr2[loc]] = min(tmp.get(arr2[loc], float('inf')), dp[key]+1)\n",
+    "            dp = tmp\n",
+    "        if dp:\n",
+    "            return min(dp.values())\n",
+    "        return -1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from math import gcd\n",
+    "input = sys.stdin.readline\n",
+    "output = sys.stdout.write\n",
+    "t = int(input())\n",
+    "for _ in range(t):\n",
+    "    n = int(input())\n",
+    "    a = list(map(int, input().split()))\n",
+    "    x = gcd(*a)\n",
+    "    if x == 1:\n",
+    "        output('0\\n')\n",
+    "    else:\n",
+    "        i = 2\n",
+    "        while gcd(x, i) != 1:\n",
+    "            i += 1\n",
+    "        output(f'{i}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "output = sys.stdout.write\n",
+    "n,m = map(int,input().split())\n",
+    "a = list(map(int,input().split()))\n",
+    "freq = {}\n",
+    "for i in a:\n",
+    "    freq[i] = freq.get(i,0)+1\n",
+    "if max(freq.values())*2>n:\n",
+    "    output(\"NO\")\n",
+    "else:\n",
+    "    output(\"YES\")"
    ]
   }
  ],
